src/test/fail/continue_outside_loop.lly
#[
SyntaxError: 'continue' used outside of a loop.
Where: File "test/fail/continue_outside_loop.lly" at line 6
]#

continue
